# unitree_go2_dev_ws

./: .gitignore  AUTO_NAVIGATION_GUIDE.md  README.md  cyclonedds_config copy.xml  cyclonedds_config.xml  log_error.txt  setup_multi_robot.sh  start_navigation.sh  test
src/go2_UDP_WIFI_bridge_Host/: package.xml  setup.cfg  setup.py
src/go2_UDP_WIFI_bridge_Host/config/: host_bridge.example.yaml
src/go2_UDP_WIFI_bridge_Host/go2_UDP_WIFI_bridge_Host/: __init__.py  bridge_node.py  config_loader.py  udp_transport.py
src/go2_UDP_WIFI_bridge_Host/launch/: host_bridge.launch.py
src/go2_UDP_WIFI_bridge_Lower/: README.md  package.xml  setup.cfg  setup.py
src/go2_UDP_WIFI_bridge_Lower/config/: lower_bridge.example.yaml
src/go2_UDP_WIFI_bridge_Lower/go2_UDP_WIFI_bridge_Lower/: __init__.py  bridge_node.py  config_loader.py  udp_transport.py
src/go2_UDP_WIFI_bridge_Lower/launch/: lower_bridge.launch.py
src/go2_driver_py/: package.xml  setup.py
src/go2_driver_py/go2_driver_py/: driver.py
src/go2_driver_py/launch/: driver.launch.py
src/go2_driver_py/params/: params.yaml
src/go2_gmapping_launcher/: package.xml  setup.cfg  setup.py
src/go2_gmapping_launcher/go2_gmapping_launcher/: go2_gmapping_launcher.py
src/go2_odom_publisher/: package.xml  setup.cfg  setup.py
src/go2_odom_publisher/go2_odom_publisher/: go2_odom_publisher.py
src/go2_position_py/: package.xml  setup.cfg  setup.py
src/go2_position_py/go2_position_py/: imu_node_py.py
src/go2_twist_bridge_py/: package.xml  setup.py
src/go2_twist_bridge_py/go2_twist_bridge_py/: sport_model.py  twist_bridge.py
src/go2_udp_wifi_bridge_common/: CMakeLists.txt  package.xml
src/go2_udp_wifi_bridge_common/include/go2_udp_wifi_bridge/: bridge_config.hpp  packetizer.hpp  udp_bridge_core.hpp
src/go2_udp_wifi_bridge_common/src/: bridge_config.cpp  packetizer.cpp  udp_bridge_core.cpp
src/go2_udp_wifi_bridge_host_cpp/: CMakeLists.txt  README.md  package.xml
src/go2_udp_wifi_bridge_host_cpp/config/: host_bridge_cpp.example.yaml
src/go2_udp_wifi_bridge_host_cpp/launch/: host_bridge_cpp.launch.py
src/go2_udp_wifi_bridge_host_cpp/src/: host_bridge_node.cpp
src/go2_udp_wifi_bridge_lower_cpp/: CMakeLists.txt  README.md  package.xml
src/go2_udp_wifi_bridge_lower_cpp/config/: lower_bridge_cpp.example.yaml
src/go2_udp_wifi_bridge_lower_cpp/launch/: lower_bridge_cpp.launch.py
src/go2_udp_wifi_bridge_lower_cpp/src/: lower_bridge_node.cpp
src/nav_launcher/: BEHAVIOR_TREE_GUIDE.md  CONFIGURATION_CHECKLIST.md  PLUGIN_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  ROS1_TO_ROS2_MIGRATION.md  TEB_CONFIGURATION_GUIDE.md  YOUR_QUESTIONS_ANSWERED.md  log.txt  package.xml  setup.cfg  setup.py
src/nav_launcher/launch/: localization_and_navigation.launch.py  unitree_navigation.launch.py
src/nav_launcher/maps/: README.md  my_map.yaml  office_map.pgm  office_map.yaml
src/nav_launcher/nav_launcher/: nav_launcher.py  set_initial_pose.py
src/nav_launcher/params/: unitree_nav2_params.yaml  unitree_nav2_params_DWB.yaml
src/nav_launcher/rviz/: nav2_default.rviz
src/point_lio_ros2-main/: lidar_data.txt  log_error.txt
src/point_lio_ros2-main/config/: avia.yaml
src/point_lio_ros2-main/src/: preprocess.cpp
src/unitree_topic_relay/: package.xml  setup.cfg
src/unitree_topic_relay/config/: topic_relay_params.yaml
src/unitree_topic_relay/launch/: topic_relay.launch.py
src/unitree_topic_relay/unitree_topic_relay/: README.md  __init__.py  setup.py  topic_relay_node.py
