<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_udp_wifi_bridge_common</name>
  <version>0.1.0</version>
  <description>Shared utilities for the Go2 UDP Wi-Fi bridge (config parsing, UDP packetization, and bridge core logic).</description>
  <maintainer email="robot@example.com">Unitree Bridge</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>go2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
