<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypes="xsd"?>
<package format="3">
  <name>unitree_topic_relay</name>
  <version>0.0.1</version>
  <description>Topic relay node for Unitree Go2 robot to forward topics from internal board to expansion board</description>
  <maintainer email="your_email@example.com">YMC</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclpy</depend>
  
  <!-- 消息类型依赖 - 根据实际使用的消息类型添加 -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
